tests/paczka1/fuzzy1/68550717.err
Error in line 6: A859 A208 32,5
Error in line 13: LDXf A208 59,5
Error in line 18: AqYO A950 96,6
Error in line 11: GU5Ng A510 44,3
Error in line 22: j4lZ3EN6Af A510 29,0
Error in line 31: A859 A208 52,1
Error in line 39: A859 A950 10,8
